[package]
name = "risq"
version = "0.1.0"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

all = ["checker", "statistics"]
checker = []
statistics = []

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
bitcoin = "0.18.2"
bitcoin_hashes = "0.7.1"
bufstream = "0.1.4"
bytes = "0.4.12"
dirs = "2.0.2"
env_logger = "0.6.2"
either = "1.5.3"
futures = "0.1.29"
futures-locks = "0.4.0"
juniper = "0.14.0"
juniper-from-schema = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.8"
prost = "0.5.0"
prost-types = "0.5.0"
rand = "0.7.2"
reqwest = "0.9.21"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
socks = "0.3.2"
tokio = "0.1.22"
uuid = { version = "0.7.4", features = ["v4"] }

[dependencies.clap]
version = "2.33.0"
features = [ "suggestions", "color", "unstable"]

[build-dependencies]
prost-build = "0.5.0"
