[package]
name = "risq"
version = "0.4.2-dev"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/bodymindarts/risq"
description = "Re-implementation of Bisq (https://github.com/bisq-network/bisq) in rust"

[features]

checker = []
dummy-seed = []
fail-on-warnings = []
statistics = []
vendored-openssl = ["openssl/vendored"]

default = ["checker", "statistics", "vendored-openssl", "fail-on-warnings"]

[dependencies]
actix = "0.8.3"
actix-web = "1.0.9"
bitcoin = "0.21.0"
bitcoin_hashes = "0.7.1"
bufstream = "0.1.4"
bytes = "0.4.12"
chrono = "0.4.9"
dirs = "2.0.2"
env_logger = "0.7.1"
either = "1.5.3"
futures = "0.1.29"
futures-locks = "0.6.0"
juniper = "0.14.1"
juniper-from-schema = "0.5.1"
lazy_static = "1.4.0"
log = "0.4.8"
openssl = "0.10.25"
prost = "0.5.0"
prost-types = "0.5.0"
rand = "0.7.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.57"
socks = "0.3.2"
tokio = "0.1.22"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.clap]
version = "2.33.0"
features = [ "suggestions", "color", "unstable"]

[dependencies.reqwest]
version = "0.9.22"
default-features = false
features = ["socks"]

[build-dependencies]
prost-build = "0.5.0"
